--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="repository_change_url_title">Repository URL</string>
     <string name="repository_default_description">No description.</string>
     <string name="write_permissions_disallow">The app was not allowed to write to your storage</string>
+    <string name="manage_permissions_disallow">Please grant access to all files</string>
 
     <!-- APPLICATION -->
     <string name="app_preferences">Application</string>
